# pilot-workers

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  provider-contract.md  task-spec.md
integrations/: README.md
integrations/claude-host/agents/: glm-coder.md  glm-explorer.md  glm-reviewer.md  glm-tester.md  kimi-coder.md  kimi-explorer.md  kimi-reviewer.md  kimi-tester.md
integrations/claude-host/commands/glm/: code.md  explore.md  review.md  test.md
integrations/claude-host/commands/kimi/: code.md  explore.md  review.md  test.md
integrations/codex-host/dispatch/: SKILL.md  entry-flow.md  openai.yaml
integrations/codex-host/glm/: SKILL.md  openai.yaml
integrations/codex-host/kimi/: SKILL.md  openai.yaml
providers/: README.md  glm.yaml  kimi-k3.yaml
scripts/: install_runtime.sh
src/pilot_workers/: __init__.py  __main__.py  credentials.py  fmt_events.py  maintain.py  policy.py  providers.py  runtime.py
src/pilot_workers/cli/: dispatch.py  fanout.py  install.py  main.py  run.py  status.py
src/pilot_workers/data/permissions/: README.md  (+2 more)
src/pilot_workers/integrations/: README.md
src/pilot_workers/prompts/: code.md  common.md  explore.md  review.md  test.md
src/pilot_workers/runners/: __init__.py  base.py  opencode.py  opencode_runner.py
src/pilot_workers/scripts/: install_runtime.sh
tests/: test_cli_main.py  test_credentials.py  test_dispatch.py  test_fanout.py  test_install.py  test_opencode_runner.py  test_policy.py  test_providers.py  test_render_unified.py  test_run_cli.py  test_runtime.py  test_status.py
(+33 files in other folders)
