[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-workers"
version = "0.3.0"
description = "Dispatch bounded tasks to isolated LLM workers (GLM, Kimi, and more)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[project.scripts]
pilot-workers = "pilot_workers.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pilot_workers = [
    "data/providers/*.yaml",
    "data/providers/*.md",
    "data/permissions/*.yaml",
    "data/permissions/*.md",
    "data/templates/*.md",
    "prompts/*.md",
    "integrations/**/*.md",
    "integrations/**/*.yaml",
    "scripts/*.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
